--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"displayName": "Sort all css rules in css files",
 	"description": "Sort all css rules in css files",
 	"version": "0.0.1",
+	"author": "web_disciple",
 	"engines": {
 		"vscode": "^1.50.0"
 	},
